tests: Embedded tests files (close #3)